# mr-seq

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configurations/: sequences.yml
demo/: border_demo_configuration.yml  demo.py  gre_demo_configuration.yml
src/mr_seq/: configuration.py  physical_setup.py  pulse_seq.py  sequence.py  sequence_generator.py  waveforms.py
src/mr_seq/sequences/: gre_sequence.py  sequence.py  sequences.py
